--- a/W3Edit/frmUsmPlayer.resx
+++ b/W3Edit/frmUsmPlayer.resx
@@ -128,4 +128,7 @@
         AAAL
 </value>
   </data>
+  <metadata name="videoConverter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
