--- a/WolvenKit/Properties/Resources.resx
+++ b/WolvenKit/Properties/Resources.resx
@@ -280,4 +280,10 @@
   <data name="PlayStep_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\playstep_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ImportPackage_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\importpackage_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="__xbmdump_3768555366" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\w3data\__xbmdump_3768555366.csv;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
