--- a/WolvenKit/Properties/Resources.resx
+++ b/WolvenKit/Properties/Resources.resx
@@ -286,4 +286,7 @@
   <data name="__xbmdump_3768555366" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\w3data\__xbmdump_3768555366.csv;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="pathhashes" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\w3data\pathhashes.csv;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
