--- a/WolvenKit/Forms/frmCR2WtoText.resx
+++ b/WolvenKit/Forms/frmCR2WtoText.resx
@@ -124,7 +124,7 @@ This text output can then be compared using a tool such as WinMerge, or searched
 
 Be aware that text dumps can be much larger than the original files; some vanilla CR2W files will produce text dumps of several megabytes each.  To dump the vanilla game + DLCs will require 25+GB.
 
-The following file extensions will not be processed: </value>
+The following file extensions will not be opened: </value>
   </data>
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
