--- a/WolvenKit/Properties/Resources.resx
+++ b/WolvenKit/Properties/Resources.resx
@@ -535,4 +535,25 @@
   <data name="Wkit_logo_500x" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\icons\wkit_logo_500x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Filter_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\visualstudio\filter_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="New_Project_dark_64x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\icons\gui\new_project_dark_64x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="New_Project_light_64x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\icons\gui\new_project_light_64x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Open_Project_dark_64x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\icons\gui\open_project_dark_64x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Open_Project_light_64x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\icons\gui\open_project_light_64x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Preferences_dark_64x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\icons\gui\preferences_dark_64x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Preferences_light_64x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\icons\gui\preferences_light_64x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
